--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -52,3 +52,58 @@
     }
   }
 }
+
+.item-button-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 10px;
+
+  .back-button {
+    min-width: 165px;
+    width: 50px;
+    height: 50px;
+    letter-spacing: 0.5px;
+    line-height: 50px;
+    font-size: 15px;
+    background-color: white;
+    color: black;
+    text-transform: uppercase;
+    font-family: 'Open Sans Condensed';
+    font-weight: bolder;
+    border: 1px solid black;
+    cursor: pointer;
+    display: flex;
+
+    justify-content: center;
+    margin-right: 2em;
+
+    &:hover {
+      background-color: black;
+      color: white;
+    }
+  }
+
+  .add-to-cart-button {
+    min-width: 165px;
+    width: 50px;
+    height: 50px;
+    letter-spacing: 0.5px;
+    line-height: 50px;
+    font-size: 15px;
+    background-color: white;
+    color: black;
+    text-transform: uppercase;
+    font-family: 'Open Sans Condensed';
+    font-weight: bolder;
+    border: 1px solid black;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+
+    &:hover {
+      background-color: black;
+      color: white;
+    }
+  }
+}
