--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -78,6 +78,7 @@ display: flex;
     cursor: pointer;
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
 
     &:hover {
       background-color: black;
