--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -87,3 +87,15 @@ display: flex;
   }
 }
 }
+
+
+.size-selector {
+display: none;
+
+  &.size{
+    margin-top: -1em;
+    margin-bottom: 1em;
+    display: flex;
+    margin-left: -.5em;
+  }
+}
