add stripe checkout button

--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,12 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  .checkout-button{
+    display: flex;
+    align-self: flex-end;
+    padding-top: 2em;
+    padding-bottom: 2em;
+
+  }
 }
