--- a/src/components/custom-button/custom-buttom.styles.scss
+++ b/src/components/custom-button/custom-buttom.styles.scss
@@ -1,25 +1,27 @@
 .custom-button {
   min-width: 165px;
-  width: auto;
+  width: 50px;
   height: 50px;
   letter-spacing: 0.5px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
   font-size: 15px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   text-transform: uppercase;
   font-family: 'Open Sans Condensed';
   font-weight: bolder;
-  border: none;
+  border: 1px solid black;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  
 
   justify-content: center;
 
   &:hover {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
+    background-color: black;
+    color: white;
+
   }
 
   &.google-sign-in {
