--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,9 +1,10 @@
 .collection-item {
-  width: 22vw;
+  max-width: 22vw;
+  min-width: 300px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-flow: wrap;
   height: 350px;
-  align-items: center;
   position: relative;
 
   .image {
@@ -13,7 +14,6 @@
     background-position: center;
     margin-bottom: 5px;
   }
-
 
   &:hover {
     .image {
@@ -32,7 +32,8 @@
     width: 100%;
     height: 5%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-flow: wrap;
     font-size: 18px;
 
     .name {
