--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-flow: wrap;
   padding-top: 10px;
   margin-right: 0em;
   margin-left: 0em;
@@ -12,12 +13,13 @@
   }
 
   .items {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-between;
+   
 
     & .collection-item {
-      margin-bottom: 30px;
+      margin-bottom: 100px;
     }
   }
 }
