--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -1,51 +1,55 @@
-.directory-item{
+.directory-item {
   border: 1px solid black;
   width: 800px;
+  margin-bottom: 5em;
+  display: flex;
+  flex-direction: column;
 
-  .entrepreneur{
+  .entrepreneur {
     display: flex;
     flex-direction: row;
-    
 
-    .quote{
+    .owner-avatar {
+      margin-top: -3em;
+      margin-left: -3em;
+    }
+
+    .quote {
       align-self: center;
-     
-      
 
-      .quote-text{
-        
-        padding-left: 1em;
-
-        
+      .quote-text {
+        margin-left: 1em;
       }
     }
   }
 
-  .directory-gallery{
-    border: 1px solid black;
-    width:400px;
-    padding-left: 100px;
-
-    .image-gallery{
-     
-    }
-
-    
-    
-  }
-
-  .button-bar{
+  .directory-gallery {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
+    border: 1px solid black;
+    background-color: rgb(46, 46, 46);
+    margin-top: 1em;
+    margin-bottom: 2em;
 
-   
+    .image-gallery-image{
+      height: 300px;
+    }
+
+  }
+
+  .button-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2em;
+
   }
 }
 
-
-img.owner-image{
-  width:200px;
+img.owner-image {
+  width: 200px;
   border-radius: 50%;
   border: 1px solid black;
 }
