improve collection styling

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -2,8 +2,8 @@
   max-width: 22vw;
   min-width: 300px;
   display: flex;
-  flex-direction: row;
-  flex-flow: wrap;
+  flex-direction: column;
+  
   height: 350px;
   position: relative;
 
