--- a/src/components/directory-item-carousel/directory-item-carousel.styles.scss
+++ b/src/components/directory-item-carousel/directory-item-carousel.styles.scss
@@ -1,9 +1,11 @@
 .container {
     position: relative;
-    width: 800px;
+    width: 400px;
     margin: auto;
     border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    margin-top: 2em;
   }
   
   .buttonBack {
